--- a/style.css
+++ b/style.css
@@ -50,3 +50,46 @@ header {
   margin-top: 32px;
   cursor: pointer;
 }
+/* failure section starts from here */
+section {
+  margin-top: 140px;
+}
+.failure-list-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 105px;
+}
+.left-image {
+  width: 451px;
+}
+.failure-heading {
+  color: #151414;
+  font-family: Work Sans;
+  font-size: 40px;
+  font-weight: 700;
+}
+.failure-description {
+  margin-top: 25px;
+  color: #444343;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+.failure-list {
+  margin-top: 16px;
+}
+.failure-list li {
+  color: #444343;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+}
+.fa-check {
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
+  color: #16d887;
+}
